--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Soy diseño</title>
     <meta charset="utf-8">
     <meta name="description" content="description">
-    <meta name="keywords" content="Arte, Diseño">
+    <meta name="keywords" content="Arte, Diseño, Billeteras">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet" type="text/css">
