images profiles community

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <title>Soy diseño</title>
     <meta charset="utf-8">
     <meta name="description" content="description">
-    <meta name="keywords" content="Arte, Diseño, Billeteras">
+    <meta name="keywords" content="Arte, Diseño">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="./images/logo_cuadrado.png" type="image/x-icon" rel="shortcut icon">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="./stylesheets/reset.css">
+    <link rel="stylesheet" href="/stylesheets/reset.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="./javascripts/animatedModal.min.js"></script>
     <script src="./javascripts/jquery.scrollTo.min.js"></script>
     <script src="./javascripts/jquery.localScroll.min.js"></script>
     <script src="./javascripts/app.js"></script>
-    <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body></body>
   <div class="content">
@@ -55,12 +58,9 @@
       <div class="flecha"><a href="#contenido"> <img src="./images/flecha.png" class="img-responsive"></a></div>
     </header>
     <section id="contenido" class="main">
-      <div class="logo"><img src="./images/logo_cuadrado.png" class="img-responsive"></div>
-      <div class="frase"><img src="./images/titulos.png" class="img-responsive"></div>
-      <div class="contenido">
-        <div class="text"><span>El diseño gráfico es una profesión! </span><br>
-          <p>Desde SOY DISEÑO queremos que todo el mundo sepa en que consiste nuestro trabajo, llevando a cabo iniciativas con este propósito, con el fin de acercar el diseño gráfico a los usuarios para que conozcan su utilidad y sus beneficios. Creemos en la importancia de educar al futuro cliente, para que valore y comprenda nuestra profesión en pro de un mejor entendimiento.</p>
-        </div>
+      <div class="logo"><img src="./images/logo_cuadrado.png"></div>
+      <div class="frase"><img src="./images/titulos.png"></div>
+      <div class="contenido"><img src="./images/texto_landing.png">
         <div class="btn-comunidad"><a href="#">Únete a la comunidad</a></div>
       </div>
     </section>
@@ -89,12 +89,48 @@
         <p>¿Tienes una idea y necesitas ayuda? Compártela con el resto de profesionales, intercambiar conocimientos y generar iniciativas.</p>
       </div>
       <div class="muestra">
-        <div class="foto"><img src="./images/rectangulo.png" class="img-responsive"></div>
-        <div class="foto"><img src="./images/rectangulo.png" class="img-responsive"></div>
-        <div class="foto"><img src="./images/rectangulo.png" class="img-responsive"></div>
-        <div class="foto"><img src="./images/rectangulo.png" class="img-responsive"></div>
-        <div class="foto"><img src="./images/rectangulo.png" class="img-responsive"></div>
-        <div class="foto"><img src="./images/rectangulo.png" class="img-responsive"></div>
+        <div class="perfil">
+          <div class="foto"><img src="./images/1.jpg"></div>
+          <div class="info"><img src="./images/perfil1.jpg">
+            <p class="nombre">Xisco</p>
+            <p class="profesion">Ilustración digital</p><a href="#"><i class="material-icons">&#xE253;</i></a>
+          </div>
+        </div>
+        <div class="perfil">
+          <div class="foto"><img src="./images/2.jpg"></div>
+          <div class="info"><img src="./images/perfil2.jpg">
+            <p class="nombre">Carmen Bretones</p>
+            <p class="profesion">Branding</p><a href="#"><i class="material-icons">&#xE253;</i></a>
+          </div>
+        </div>
+        <div class="perfil">
+          <div class="foto"><img src="./images/3.jpg"></div>
+          <div class="info"><img src="./images/perfil3.jpg">
+            <p class="nombre">Alejandra</p>
+            <p class="profesion">Diseño editorial</p><a href="#"><i class="material-icons">&#xE253;</i></a>
+          </div>
+        </div>
+        <div class="perfil">
+          <div class="foto"><img src="./images/4.jpg"></div>
+          <div class="info"><img src="./images/perfil4.jpg">
+            <p class="nombre">Emilio</p>
+            <p class="profesion">Branding</p><a href="#"><i class="material-icons">&#xE253;</i></a>
+          </div>
+        </div>
+        <div class="perfil">
+          <div class="foto"><img src="./images/5.jpg"></div>
+          <div class="info"><img src="./images/perfil5.jpg">
+            <p class="nombre">M.Flor</p>
+            <p class="profesion">Campañas publicitarias</p><a href="#"><i class="material-icons">&#xE253;</i></a>
+          </div>
+        </div>
+        <div class="perfil">
+          <div class="foto"><img src="./images/6.jpg"></div>
+          <div class="info"><img src="./images/perfil6.jpg">
+            <p class="nombre">Juanki.mc</p>
+            <p class="profesion">Diseño interactivo</p><a href="#"><i class="material-icons">&#xE253;</i></a>
+          </div>
+        </div>
       </div>
     </section>
     <section class="calltoaction">
