Fix errors load css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="./javascripts/jquery.scrollTo.min.js"></script>
     <script src="./javascripts/jquery.localScroll.min.js"></script>
     <script src="./javascripts/app.js"></script>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="./stylesheets/style.css">
   </head>
   <body></body>
   <div class="content">
