--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
     <link rel="stylesheet" href="./stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
-    <script src="./javascripts/jquery.min.js"></script>
-    <script src="./javascripts/bootstrap.min.js"></script>
-    <script src="./javascripts/jquery.scrollTo.min.js"></script>
-    <script src="./javascripts/jquery.localScroll.min.js"></script>
-    <script src="./javascripts/app.js"></script>
     <link rel="stylesheet" href="./stylesheets/style.css">
   </head>
-  <body></body>
+  <body>
   <div class="content">
     <nav id="menu">
       <div class="logo"><a href="#inicio"><img id="logo" src="./images/logo_barra_1.png"></a></div>
@@ -46,8 +40,8 @@
                     </div>
                     <div class="modal-body">
                       <div class="social">
-                        <div class="face Modalboton"><i aria-hidden="true" class="fa fa-facebook"></i><a href="#">Ingresar con Facebook</a></div>
-                        <div class="tuit Modalboton"><i aria-hidden="true" class="fa fa-twitter"></i><a href="#">Ingresar con Twitter</a></div>
+                        <div class="face Modalboton"><i aria-hidden="true" class="fa fa-facebook"></i><a href="user.html">Ingresar con Facebook</a></div>
+                        <div class="tuit Modalboton"><i aria-hidden="true" class="fa fa-twitter"></i><a href="user.html">Ingresar con Twitter</a></div>
                         <p>o </p>
                       </div>
                       <div class="login">
@@ -55,9 +49,9 @@
                           <input type="text" placeholder="Usuario">
                           <input type="password" placeholder="Contraseña">
                         </form><a id="olvidado" href="#">¿Olvidastes tu contraseña?</a>
-                        <div class="initBoton"><a href="#">Iniciar Sesión</a></div>
+                        <div class="initBoton"><a href="user.html">Iniciar Sesión</a></div>
                       </div>
-                      <div class="newlogin"> 
+                      <div class="newlogin">
                         <p>¿No tienes una cuenta?</p><a href="#">Únete ahora</a>
                       </div>
                     </div>
@@ -78,12 +72,11 @@
                     </div>
                     <div class="modal-body">
                       <p>
-                         
                         Date a conocer, gana dinero y ayudanos<br>a dar a conecer el diseño grafico
                       </p>
                       <div class="social">
-                        <div class="face Modalboton"><i aria-hidden="true" class="fa fa-facebook"></i><a href="#">Ingresar con Facebook</a></div>
-                        <div class="tuit Modalboton"><i aria-hidden="true" class="fa fa-twitter"></i><a href="#">Ingresar con Twitter</a></div>
+                        <div class="face Modalboton"><i aria-hidden="true" class="fa fa-facebook"></i><a href="user.html">Ingresar con Facebook</a></div>
+                        <div class="tuit Modalboton"><i aria-hidden="true" class="fa fa-twitter"></i><a href="user.html">Ingresar con Twitter</a></div>
                         <p>o </p>
                       </div>
                       <div class="login">
@@ -92,7 +85,7 @@
                           <input type="text" placeholder="Nombre de usuario">
                           <input type="password" placeholder="Contraseña">
                         </form>
-                        <div class="initBoton"><a href="#">Iniciar Sesión</a></div>
+                        <div class="initBoton"><a href="user.html">Iniciar Sesión</a></div>
                       </div>
                     </div>
                   </div>
@@ -240,4 +233,10 @@
       </div>
     </section>
   </div>
+  <script src="./javascripts/jquery.min.js"></script>
+  <script src="./javascripts/bootstrap.min.js"></script>
+  <script src="./javascripts/jquery.scrollTo.min.js"></script>
+  <script src="./javascripts/jquery.localScroll.min.js"></script>
+  <script src="./javascripts/app.js"></script>
+  </body>
 </html>
